--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bryan Nolasco",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.18.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bryannolasco11/Note-Taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bryannolasco11/Note-Taker/issues"
+  },
+  "homepage": "https://github.com/bryannolasco11/Note-Taker#readme"
 }
