--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Bryan Nolasco",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uniqid": "^5.4.0"
   },
   "repository": {
     "type": "git",
